--- a/app/src/main/res/layout/activity_tv_details.xml
+++ b/app/src/main/res/layout/activity_tv_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".View.Activities.TvDetailsActivity"
-    android:background="@drawable/gradient_color_bg">
+    android:background="#141414">
     <ScrollView
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
@@ -13,42 +13,115 @@
         android:scrollbars="none">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="-16dp">
+            android:layout_height="wrap_content">
 
-            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
-                android:id="@+id/youtube_player_view2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
+            <FrameLayout
+                android:id="@+id/backdropFL"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="300dp">
+                <ImageView
+                    android:src="@drawable/aaaaby8rhdsiftokfnzl3or_t_cixonehoe5v47ck_yov6sq9u6dgcxi6g0vjlelkvrdotghhneztw9qa_q14oimsyyoualu2zqn4ioramujvt3qfeugs5iotornev_a18bszhmztw"
+                    android:id="@+id/TVbackdrop"
+                    android:scaleType="centerCrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:contentDescription="TODO" />
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:layout_gravity="bottom"
+                    android:id="@+id/imageView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    app:srcCompat="@drawable/backdrop_gradient" />
+            </FrameLayout>
+            
+
+            
+<!--            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView-->
+<!--                android:id="@+id/youtube_player_view2"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="50dp"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintHorizontal_bias="0.0"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
+
 
             <TextView
                 android:id="@+id/tvTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
                 android:text="TV Name"
                 android:textColor="@android:color/white"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/youtube_player_view2" />
+                app:layout_constraintTop_toBottomOf="@+id/backdropFL" />
 
-            <TextView
-                android:id="@+id/tvYear"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:id="@+id/rateLL"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="16dp"
-                android:text="year"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="10dp"
+                >
+                <ImageView
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/star"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:contentDescription="TODO"
+                    app:tint="#5AD065" />
+                <TextView
+                    android:id="@+id/tvRate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="8.8"
+                    android:textColor="#5AD065"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="16dp"
+                    />
+                <TextView
+                    android:id="@+id/tvYear"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="YEAR"
+                    android:textColor="@android:color/white"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="16dp"
+                     />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="•"
+                    android:textColor="@android:color/white"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    />
+                <TextView
+                    android:id="@+id/tvSeasonCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="7 Mùa"
+                    android:textColor="@android:color/white"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:textSize="16dp"
+                    />
+            </LinearLayout>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/playBtn"
@@ -69,28 +142,28 @@
                 app:iconGravity="textStart"
                 app:iconTint="@android:color/black"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvYear" />
+                app:layout_constraintTop_toBottomOf="@+id/rateLL" />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/saveBtn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="20dp"
-                android:paddingHorizontal="20dp"
-                android:paddingVertical="12dp"
-                android:text="Danh Sách"
-                android:textColor="@android:color/white"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                app:backgroundTint="#2B2B2D"
-                app:cornerRadius="10dp"
-                app:icon="@drawable/add"
-                app:iconGravity="textStart"
-                app:iconTint="@android:color/white"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/playBtn" />
+<!--            <com.google.android.material.button.MaterialButton-->
+<!--                android:id="@+id/saveBtn"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="20dp"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:layout_marginEnd="20dp"-->
+<!--                android:paddingHorizontal="20dp"-->
+<!--                android:paddingVertical="12dp"-->
+<!--                android:text="Danh Sách"-->
+<!--                android:textColor="@android:color/white"-->
+<!--                android:textSize="16dp"-->
+<!--                android:textStyle="bold"-->
+<!--                app:backgroundTint="#2B2B2D"-->
+<!--                app:cornerRadius="10dp"-->
+<!--                app:icon="@drawable/add"-->
+<!--                app:iconGravity="textStart"-->
+<!--                app:iconTint="@android:color/white"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@+id/playBtn" />-->
 
             <TextView
                 android:id="@+id/tvOverview"
@@ -104,7 +177,7 @@
                 android:text="Đang câpj nhật ..."
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/saveBtn" />
+                app:layout_constraintTop_toBottomOf="@+id/playBtn" />
 
             <TextView
                 android:id="@+id/tvActor"
@@ -116,14 +189,100 @@
                 android:text="Diễn viên : Đang cập nhật... "
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvOverview"
+                android:textColor="#9D999A"
                 />
 
             <LinearLayout
-                android:layout_marginTop="20dp"
+                android:id="@+id/ButtonGroupLL"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvActor"
+                android:orientation="horizontal"
+                android:gravity="left"
+                android:layout_marginHorizontal="25dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40dp">
+                    <androidx.appcompat.widget.AppCompatImageButton
+                        android:tint="@android:color/white"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_add_big"
+                        android:backgroundTint="@android:color/transparent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:layout_gravity="center_horizontal"
+                        android:text="Danh Sách"
+                        android:textSize="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#9D999A"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="40dp">
+                    <androidx.appcompat.widget.AppCompatImageButton
+                        android:tint="@android:color/white"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_like"
+                        android:backgroundTint="@android:color/transparent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="8dp"
+                        />
+                    <TextView
+                        android:layout_gravity="center_horizontal"
+                        android:text="Yêu Thích"
+                        android:textSize="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#9D999A"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <androidx.appcompat.widget.AppCompatImageButton
+                        android:tint="@android:color/white"
+                        android:layout_gravity="center_horizontal"
+                        android:src="@drawable/ic_send"
+                        android:backgroundTint="@android:color/transparent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginBottom="5.8dp"
+                        />
+                    <TextView
+                        android:layout_gravity="center_horizontal"
+                        android:text="Chia sẻ"
+                        android:textSize="12dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="#9D999A"
+                        />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="30dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/tvActor"
+                app:layout_constraintTop_toBottomOf="@+id/ButtonGroupLL"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
                 <com.google.android.material.tabs.TabLayout
@@ -133,11 +292,12 @@
                     android:layout_height="50dp"
                     app:tabIndicatorAnimationMode="elastic"
                     app:tabIndicatorColor="@null"
-                    app:tabIndicator="@android:color/transparent"
+                    app:tabIndicatorFullWidth="true"
+                    app:tabIndicator="@drawable/top_bar_tablayout"
                     android:background="@android:color/transparent"
                     app:tabIndicatorGravity="stretch"
                     app:tabMode="fixed"
-                    app:tabSelectedTextColor="@color/red" />
+                    app:tabSelectedTextColor="@android:color/white" />
 
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/view_pager2"
