--- a/app/src/main/res/layout/fragment_tv_episode.xml
+++ b/app/src/main/res/layout/fragment_tv_episode.xml
@@ -3,11 +3,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:focusableInTouchMode="true"
     tools:context=".View.Fragments.TvEpisodeFragment">
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/tvEpisodeView"
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:nestedScrollingEnabled="false" />
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/season_select"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#A5A3A6"
+                android:text="Mùa 1"
+                android:textSize="16dp"
+                android:drawableEnd="@drawable/ic_arrow_down"
+                android:backgroundTint="#141414"/>
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tvEpisodeView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:nestedScrollingEnabled="false" />
+
+    </LinearLayout>
+
+
 </FrameLayout>
