--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="bottom_bar">#631723</color>
     <color name="shimmerColor">#514545</color>
     <color name="red">#AF2117</color>
+    <color name="primary">#D0001C</color>
 </resources>
