--- a/app/src/main/res/layout/fragment_tv_episode.xml
+++ b/app/src/main/res/layout/fragment_tv_episode.xml
@@ -29,6 +29,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_marginHorizontal="20dp"
             android:id="@+id/tvEpisodeView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
