--- a/app/src/main/res/layout/play_list_item_container.xml
+++ b/app/src/main/res/layout/play_list_item_container.xml
@@ -7,7 +7,7 @@
     android:foreground="?selectableItemBackgroundBorderless"
     android:clickable="true"
     android:focusable="true"
-    android:layout_marginBottom="5dp"
+    android:paddingVertical="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/backdropPL"
