--- a/app/src/main/res/drawable/gradient_color_bg.xml
+++ b/app/src/main/res/drawable/gradient_color_bg.xml
@@ -28,5 +28,5 @@
 <!--    </item>-->
 <!--</layer-list>-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <gradient android:startColor="#141414" android:endColor="#2C3332" android:angle="90" />
+    <gradient android:startColor="#597470" android:endColor="#141414" android:angle="270" />
 </shape>
