--- a/app/src/main/res/layout/slide_item_container_top_number.xml
+++ b/app/src/main/res/layout/slide_item_container_top_number.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="125dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="10dp"
     >
+
+    <com.example.cineflix.View.StrokeTextView
+        android:id="@+id/top_number"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:letterSpacing="-0.3"
+        android:text="10"
+        android:textColor="#141414"
+        android:textSize="120dp"
+        android:textStyle="bold"
+        android:translationY="25dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imagePoster"
+        app:layout_constraintEnd_toStartOf="@+id/imagePoster" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imagePoster"
@@ -20,6 +34,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.432"
+        android:layout_marginLeft="75dp"
         android:foreground="?selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true">
@@ -35,5 +50,7 @@
         app:layout_constraintEnd_toEndOf="@+id/imagePoster"
         app:layout_constraintStart_toStartOf="@+id/imagePoster"
         app:layout_constraintTop_toBottomOf="@+id/imagePoster" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
